Fix title/image links

--- a/pages/refactorcamp2014.html
+++ b/pages/refactorcamp2014.html
@@ -5,7 +5,7 @@
   <li> <a href="https://docs.google.com/forms/d/1XvVui3PXTkG6m_Meix4KXhSaoRDuVZRJtGoxDbXorgI/viewform">Click here to propose a session</a> .</li></ul></p>
   <div class="grouper">
     <div class="picture-left-narrow">
-    <img src="chm.jpg" width="200">
+    <img src="https://kyleamathews.github.io/refactor-camp-website/chm.jpg" width="200">
     </div>
     <div class="important-right">
       <h6>Agenda (tentative) </h6>
