--- a/pages/refactorcamp2012.html
+++ b/pages/refactorcamp2012.html
@@ -3,7 +3,7 @@
   <div class="full-width-box"><p>The inaugural edition of Refactor Camp was held on Saturday, March 3, 2012 at the San Francisco Zoo. The goal for this inaugural edition was to talk about the idea of "scratching your own itch" as a way of figuring out interesting lifestyles and projects for yourself. The idea behind holding the event at a zoo was to catalyze some creative thinking about the interplay between generativity and captivity in pursuing itch-scratching impulses.</div>
   <div class="grouper">
     <div class="picture-left">
-      <img src="onthebeach.jpg" width="200">
+      <img src="https://kyleamathews.github.io/refactor-camp-website/onthebeach.jpg" width="200">
     </div>
     <div class="important-right">
     <h6>Speakers</h6>
