--- a/pages/refactorcamp2013.html
+++ b/pages/refactorcamp2013.html
@@ -3,7 +3,7 @@
   <p>Refactor Camp 2013 was held March 2-3 at the San Francisco Zoo, the same venue as 2012. The broad goal in 2013 was to think about how the concept of "jailbreaking" (as in iPhones) can be productively applied to a metropolitan region with a "walled garden" culture. We focused on the Bay Area, but generated interesting ideas applicable to disruptive "civic entrepreneurship" in any urban area.</p>
   <div class="grouper">
     <div class="picture-left-narrow">
-    <img src="refactorcamp2013.jpg">
+    <img src="https://kyleamathews.github.io/refactor-camp-website/refactorcamp2013.jpg">
     </div>
     <div class="important-right">
       <h6>Speakers</h6>
@@ -30,7 +30,7 @@
         <li>Organization: Jane Huang</li>
         <li>A/V: Mike Travers</li>
         <li>Emceeing: Nick Pinkston</li>
-      </ul>						
+      </ul>
     </div>
   </div>
 </div>
