Make quotes 'smart'

--- a/pages/refactorcamp2013.html
+++ b/pages/refactorcamp2013.html
@@ -1,5 +1,5 @@
 <div>
-  <h1>"Jailbreaking the Bay Area"</h1>
+  <h1>“Jailbreaking the Bay Area”</h1>
   <p>Refactor Camp 2013 was held March 2-3 at the San Francisco Zoo, the same venue as 2012. The broad goal in 2013 was to think about how the concept of "jailbreaking" (as in iPhones) can be productively applied to a metropolitan region with a "walled garden" culture. We focused on the Bay Area, but generated interesting ideas applicable to disruptive "civic entrepreneurship" in any urban area.</p>
   <img src="https://kyleamathews.github.io/refactor-camp-website/refactorcamp2013.jpg">
   <h6>Speakers</h6>
